Update 01-terraform-provision-aks-cluster-pipeline.yml for Azure Pipelines

--- a/01-terraform-provision-aks-cluster-pipeline.yml
+++ b/01-terraform-provision-aks-cluster-pipeline.yml
@@ -31,17 +31,17 @@ stages:
             terraformVersion: 'latest'
         - task: TerraformCLI@0
           inputs:
-            command: 'init'
-            workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
-            backendType: 'azurerm'
-            backendServiceArm: 'terraform-aks-azurerm-svc-con'
-            ensureBackend: true
-            backendAzureRmResourceGroupName: 'terraform-storage-rg'
-            backendAzureRmResourceGroupLocation: 'Central US'
-            backendAzureRmStorageAccountName: 'terraformstatexlrwdrzs'
-            backendAzureRmContainerName: 'tfstatefiles'
-            backendAzureRmKey: 'aks-base.tfstate'
-            allowTelemetryCollection: false
+           command: 'init'
+           workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
+           backendType: 'azurerm'
+           backendServiceArm: 'terraform-aks-azurerm-svc-con'
+           backendAzureRmResourceGroupName: 'terraform-storage-rg'
+           backendAzureRmStorageAccountName: 'terraformstatwdrzsneha'
+           backendAzureRmContainerName: 'tfstatefiles'
+           backendAzureRmKey: 'aks-base.tfstate'
+           allowTelemetryCollection: false
+
+           
         - task: TerraformCLI@0
           inputs:
             command: 'validate'
