--- a/01-terraform-provision-aks-cluster-pipeline.yml
+++ b/01-terraform-provision-aks-cluster-pipeline.yml
@@ -8,6 +8,12 @@ trigger:
 
 pool:
   vmImage: ubuntu-latest
+  
+variables:
+- name: DEV_ENVIRONMENT
+  value: dev
+- name: QA_ENVIRONMENT
+  value: QA
 
 # Stage-1: Terraform Validate Stage
 ## Step-1: Publish Artifacts to Pipeline (Pipeline artifacts provide a way to share files 
@@ -47,10 +53,52 @@ stages:
             command: 'validate'
             workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
             allowTelemetryCollection: false
-        
 
-  
-
-    
+- stage: DeployAKS
+  jobs:
+    - deployment: DeployAKS
+      pool:
+        vmImage: 'ubuntu-latest'
+      environment: $(DEV_ENVIRONMENT)
+      strategy: 
+       runOnce:
+         deploy:
+           steps:
+           
+           - task: DownloadSecureFile@1
+             inputs:
+               secureFile: 'aks-terraform-devops-ssh-key-ububtu.pub'
+           - task: TerraformCLI@0
+             inputs:
+               command: 'init'
+               workingDirectory: '$(Pipeline.Workspace)/terraform-manifests-out'
+               backendType: 'azurerm'
+               backendServiceArm: 'terraform-aks-azurerm-svc-con'
+               backendAzureRmResourceGroupName: 'terraform-storage-rg'
+               backendAzureRmStorageAccountName: 'terraformstatwdrzsneha'
+               backendAzureRmContainerName: 'tfstatefiles'
+               backendAzureRmKey: 'aks-$(DEV_ENVIRONMENT).tfstate'
+               allowTelemetryCollection: false
+               
+           - task: TerraformCLI@0
+             displayName: Terraform Plan
+             inputs:
+                 command: 'plan'
+                 workingDirectory: '$(Pipeline.Workspace)/terraform-manifests-out'
+                 environmentServiceName: 'terraform-aks-azurerm-svc-con'
+                 commandOptions: '-var ssh_public_key=$(sshkey.secureFilePath) -var environment=$(DEV_ENVIRONMENT) -out $(Pipeline.Workspace)/terraform-manifests-out/$(DEV_ENVIRONMENT)-$(Build.BuildId).out'
+                 allowTelemetryCollection: false
+              
+           - task: TerraformCLI@0
+             displayName: Terraform Apply
+             inputs:
+               command: 'apply'
+               workingDirectory: '$(Pipeline.Workspace)/terraform-manifests-out'
+               environmentServiceName: 'terraform-aks-azurerm-svc-con'
+               commandOptions: '$(Pipeline.Workspace)/terraform-manifests-out/$(DEV_ENVIRONMENT)-$(Build.BuildId).out'
+               allowTelemetryCollection: false
+              
           
-  
+
+         
+            
